# ir.py

./: .env.example  .gitignore  AGENTS.md  COMPANIES.json  README.md  app.py  hand_app.py  main.py  pyproject.toml  requirements.txt  test_app.py
.claude/: CLAUDE.md
config/: chart-comparisons.json
data/: companies.example.json
docs/: edinet-mvp-roadmap.md  phase1-financial-data-spec.md  phase2-fetch-preparation.md  phase2-validation.md  phase3-json-preparation.md
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/companies/[ticker]/: page.tsx
frontend/app/compare/: page.tsx
frontend/app/stats/: page.tsx
frontend/components/: metric-line-chart.tsx  static-metric-chart.tsx
frontend/data/: chart-manifest.json  financials.json  stats.json
frontend/lib/: charts.ts  companies.ts  financials.ts  stats.ts
pages/: chart.py  comparison.py
src/: build_analytics.py  build_financials.py  fetch_direct_companies.py  fetch_edinet.py  query_analytics.py
tests/: test_build_analytics.py  test_build_financials.py  test_build_multiple_financials.py  test_fetch_direct_companies.py  test_fetch_edinet.py
