[project]
name = "ir-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.2",
    "httpx>=0.28.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "pyarrow>=20.0.0",
    "pytz>=2025.2",
    "seaborn>=0.13.2",
]
